# natural-deduction

./: CHANGELOG.md  LICENSE  default.nix  natural-deduction.cabal
src/: NaturalDeduction.hs
